# PayPay2MF

./: .gitignore  .markdownlint.json  LICENSE  README.md  config_sample.yml  firestore_backfill.py  main.py  mf_categories_sample.yml  pyproject.toml  テストケース詳細手順書.md  要件定義書.md  設定ファイルYAMLスキーマ仕様書.md
.github/workflows/: ci-tests.yml  main.yml  python-package.yml  release-build.yml
docs/: テスト仕様書.md  基本設計書.md  要件定義書.md  設定ファイルYAMLスキーマ仕様書.md  設定ファイル仕様書.md
src/: chrome_check.py  config_loader.py  constants.py  csv_parser.py  duplicate_detector.py  filter.py  log_manager.py  mf_category_map.py  mf_page.py  mf_registrar.py  mf_selectors.py  models.py
src/paypay2mf/: __init__.py  chrome_check.py  cli.py  config_loader.py  constants.py  csv_parser.py  duplicate_detector.py  filter.py  firestore_backfill.py  log_manager.py  mf_categories.yml  mf_category_map.py  mf_page.py  mf_registrar.py  mf_selectors.py  models.py
tests/: conftest.py  test_config_loader.py  test_csv_parser.py  test_duplicate_detector.py  test_filter.py  test_firestore_backfill.py  test_log_manager.py  test_log_manager_rotation_size.py  test_main.py  test_mf_category_map.py  test_mf_page.py  test_mf_registrar.py  test_mf_smoke.py  test_models.py  test_pyproject_dependencies.py
tests/fixtures/: test_input.csv  test_input_sjis.csv
