[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "paypay2mf"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "psutil>=5.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gcloud = [
    "google-cloud-firestore>=2.13",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
paypay2mf = "main:main"

[tool.setuptools.package-data]
src = ["mf_categories.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke_test: explicit Playwright smoke tests against a logged-in Money Forward profile",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["BLE001", "D", "ERA001", "INP001", "T201", "TRY401", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E501",     # テストデータの長い行
    "PLR2004",  # assert での数値比較（マジックナンバー）
    "S101",     # assert 文の使用
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "cr-lf"
