[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paypay2mf"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright>=1.40",
    "psutil>=5.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gcloud = [
    "google-cloud-firestore>=2.13",
]
dev = [
    "pip-audit>=2.7",
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.11",
]

[project.scripts]
paypay2mf = "paypay2mf.cli:main"
paypay2mf-firestore-backfill = "paypay2mf.firestore_backfill:main"

[tool.setuptools.package-data]
paypay2mf = ["mf_categories.yml"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["paypay2mf"]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration_flow: orchestration and side-effect tests around the main application flow",
    "smoke_test: explicit Playwright smoke tests against a logged-in Money Forward profile",
    "ui_contract: fake-based UI contract tests for Money Forward page and registrar interactions",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["BLE001", "COM812", "D", "ERA001", "INP001", "T201", "TRY401", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # fixture 引数は未注釈で簡潔に扱う
    "E501",    # テストデータの長い行
    "PLR2004", # assert での数値比較（マジックナンバー）
    "PLR0913", # factory fixture は引数が多くなりやすい
    "S101",    # assert 文の使用
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "cr-lf"
